--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -11,7 +11,7 @@ jobs:
         python-version: 3.11.2
     - name: Install dependencies
       run: |
-        #make install
+        make install
     - name: Lint with Pylint
       run: |
         #make lint
