--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -12,12 +12,12 @@ jobs:
     - name: Install dependencies
       run: |
         make install
-    - name: Lint with Pylint
-      run: |
-        #make lint
-    - name: Test with Pytest
-      run: |
-        #make test
     - name: Format code
       run: |
-        #make format
+        make format
+    - name: Lint with Pylint
+      run: |
+        make lint
+    - name: Test with Pytest
+      run: |
+        make test
