--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+httpx==0.23.3
 wikipedia==1.4.0
 pytest==7.2.1
 pytest-cov==4.0.0
 pylint==2.16.2
 black==23.1.0
 fire==0.5.0
+fastapi==0.92.0
+uvicorn==0.20.0
